<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="criminal_text_hint">Enter a criminal title</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_detail_label">Detail</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of Crime</string>
    <string name="crime_time">Choose time</string>
    <string name="time_picker_title">Time of Crime</string>
    <string name="crime_date">OK</string>
</resources>
